<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".TitleFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#E2E2D5"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_home"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/opensans"
                android:gravity="center"
                android:text="menu"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black"
                app:cardCornerRadius="8dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <SearchView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textViewExtraInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/opensans"
                android:gravity="center"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="30dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#F1F1ED"
                android:minWidth="250dp"
                android:orientation="horizontal"

                >

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/GfG_full_logo"
                    app:srcCompat="@drawable/halal" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/GfG_full_logo"
                    app:srcCompat="@drawable/kosher" />

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/GfG_full_logo"
                    app:srcCompat="@drawable/vegetarisch" />

                <ImageView
                    android:layout_width="47dp"
                    android:layout_height="60dp"
                    android:layout_margin="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/GfG_full_logo"
                    app:srcCompat="@drawable/glutenvrij" />


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/opensans"
                android:gravity="center"
                android:text="@string/broodjes"
                android:textColor="@color/black"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:background="@color/black"
                        app:cardCornerRadius="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:fontFamily="@font/opensans"
                            android:gravity="center"
                            android:text="Tonijn"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="130dp"
                            android:fontFamily="@font/opensans"
                            android:gravity="center"
                            android:text="2,50€"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="top|center"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/tonijn" />


                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:background="@color/black"
                        app:cardCornerRadius="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:fontFamily="@font/opensans"
                            android:gravity="center"
                            android:text="Mozza"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="130dp"
                            android:fontFamily="@font/opensans"
                            android:gravity="center"
                            android:text="3,50€"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="top|center"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/surimi" />


                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:background="@color/black"
                        app:cardCornerRadius="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:fontFamily="@font/opensans"
                            android:gravity="center"
                            android:text="Tonijn"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="130dp"
                            android:fontFamily="@font/opensans"
                            android:gravity="center"
                            android:text="2,50€"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="top|center"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/tonijn" />


                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="30dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="150dp"
                        android:layout_height="160dp"
                        android:background="@color/black"
                        app:cardCornerRadius="8dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="100dp"
                            android:fontFamily="@font/opensans"
                            android:gravity="center"
                            android:text="Mozza"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="130dp"
                            android:fontFamily="@font/opensans"
                            android:gravity="center"
                            android:text="3,50€"
                            android:textColor="@color/black"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_gravity="top|center"
                            android:layout_margin="5dp"
                            app:srcCompat="@drawable/surimi" />


                    </androidx.cardview.widget.CardView>
                </RelativeLayout>

            </LinearLayout>
            <Button
                android:layout_gravity="center"
                android:id="@+id/buttonDetails"
                android:layout_width="342dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#B8860B"
                android:fontFamily="@font/opensans"
                android:text="@string/buttonDetails"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>


    </ScrollView>
</layout>